# assignment-04-vifaratc

./: CMakeLists.txt  README.md
include/: animal.hpp  animal_rights_group.hpp  fish.hpp  keeper.hpp  monkey.hpp  observer.hpp  subject.hpp  tiger.hpp  tourist.hpp  visitor.hpp
src/: animal_rights_group.cpp  fish.cpp  keeper.cpp  monkey.cpp  subject.cpp  tiger.cpp  tourist.cpp
tests/: CMakeLists.txt
tests/src/: test_animals.cpp  test_observer.cpp
